# Soft_development1

./: README.md
Lab1/: CMakeLists.txt  file.cpp  file.h  file1.txt  filemanager.cpp  filemanager.h  logger.cpp  logger.h  main.cpp
